Add initial support for LPP API

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_TIMEZONE=Europe/Ljubljana
 APP_URL=http://localhost
 
+# LPP API
+LPP_API_URL=https://data.lpp.si/api/
+LPP_API_KEY=
+
 # Docker
 DOCKER_USER_ID=1001
 
