--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ DB_DATABASE=trola
 DB_USERNAME=root
 DB_PASSWORD=root
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -53,7 +53,7 @@ QUEUE_CONNECTION=redis
 CACHE_STORE=redis
 CACHE_PREFIX=
 
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=trola_redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
