--- a/docker-env/nginx/conf.d/dev/app.conf
+++ b/docker-env/nginx/conf.d/dev/app.conf
@@ -11,6 +11,50 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
+    # Enable gzip compression
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+    application/javascript
+    application/json
+    application/xml
+    text/css
+    text/html
+    text/javascript
+    text/plain
+    text/xml
+    image/svg+xml
+    font/woff
+    font/woff2;
+
+    # Add expires headers for browser caching
+    location ~* \.(jpg|jpeg|png|gif|ico|webp)$ {
+        expires 1M;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
+    }
+
+    location ~* \.(css|js)$ {
+        expires 1d;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
+    }
+
+    location ~* \.(pdf|svg|woff|woff2|ttf|eot)$ {
+        expires 1M;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
+    }
+
+    location ~* \.(html|htm|xml|txt|json)$ {
+        expires 1d;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
@@ -34,6 +78,11 @@ server {
         fastcgi_buffers 16 32k;
         fastcgi_buffer_size 64k;
         fastcgi_busy_buffers_size 64k;
+
+        # Prevent caching of dynamic PHP content
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
 
