--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
-        "vite": "^5.0"
+        "terser": "^5.39.0",
+        "vite": "^6.2.5"
     }
 }
